changes from PR review